@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.12.3
+VERSION=1.12.4
 
-DEPENDENCY="zeda=1.6.45;zm=1.6.3"
+DEPENDENCY="zeda=1.6.47;zm=1.6.9"
 
 # DAE (COLLADA)
 CONFIG_USE_DAE=y
